--- a/Frontend/FlightsProject/src/app/components/home/home.component.html
+++ b/Frontend/FlightsProject/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-wrap align-items-center justify-content-center">
-    <div class="m-3">
-        <h1>DCX</h1>
+<div class="flex flex-row align-items-center justify-content-center">
+    <div class="m-4">
+        <h1 class="text-center">DCX</h1>
         <app-search-flights></app-search-flights>
         <app-list-flights-container></app-list-flights-container>
     </div>
