--- a/Frontend/FlightsProject/src/app/components/list-flights-container/list-flights-container.component.html
+++ b/Frontend/FlightsProject/src/app/components/list-flights-container/list-flights-container.component.html
@@ -1,24 +1,23 @@
 <h2 class="text-center"> DCX Result</h2>
-<div class="card ">
-    <p-dataView #dv [value]="journeys">
-        <ng-template let-journey pTemplate="listItem">
-            <div class="col-12 ">
-                <div class="flex flex-column xl:flex-row xl:align-items-start p-1">
-                    <div
-                        class="flex flex-column sm:flex-row justify-content-between align-items-center sm:align-items-start flex-1 gap-4 ">
-                        <div class="flex flex-column align-items-center sm:align-items-start gap-4 ">
-                            <div class="text-2xl text-900 ">
-                                {{ journey.Journey.Origin}} - {{journey.Journey.Destination}}
 
-                            </div>
-                            <span class="text-2xl">
-                                USD $ {{ journey.Journey.Price}}
-                            </span>
+<ng-template let-journey ngFor let-flight [ngForOf]="journeys">
+    <p-card class="flex align-items-center justify-content-center mb-2">
+        <div class="col-12">
+            <div class="flex flex-column xl:flex-row xl:align-items-start p-1">
+                <div
+                    class="flex flex-column sm:flex-row justify-content-between align-items-center sm:align-items-start flex-1 gap-4 ">
+                    <div class="flex flex-column align-items-center sm:align-items-start gap-4 ">
+                        <div class="text-2xl text-900 ">
+                            {{ journey.Journey.Origin}} - {{journey.Journey.Destination}}
+
                         </div>
-                        <app-card-flights [flights]="journey.Journey.Flights"></app-card-flights>
+                        <span class="text-2xl">
+                            USD $ {{ journey.Journey.Price}}
+                        </span>
                     </div>
+                    <app-card-flights [flights]="journey.Journey.Flights"></app-card-flights>
                 </div>
             </div>
-        </ng-template>
-    </p-dataView>
-</div>
+        </div>
+    </p-card>
+</ng-template>
