--- a/Frontend/FlightsProject/src/app/components/card-flights/card-flights.component.html
+++ b/Frontend/FlightsProject/src/app/components/card-flights/card-flights.component.html
@@ -2,14 +2,14 @@
     <div class="border-solid border-round surface-border">
         <div class="px-7 py-1">
             <div>
-                {{flight.Origin}} - {{flight.Destination }}
+                {{flight.origin}} - {{flight.destination }}
 
             </div>
 
         </div>
         <div class="flex justify-content-end">
             <div class="flex align-items-center justify-content-center">
-                {{flight.Transport.FlightCarrier}} {{flight.Transport.FlightNumber}}
+                {{flight.transport.flightCarrier}} {{flight.transport.flightNumber}}
             </div>
         </div>
     </div>
