--- a/Frontend/FlightsProject/src/app/components/list-flights-container/list-flights-container.component.html
+++ b/Frontend/FlightsProject/src/app/components/list-flights-container/list-flights-container.component.html
@@ -1,5 +1,3 @@
-<h2 class="text-center"> DCX Result</h2>
-
 <ng-template let-journey ngFor let-flight [ngForOf]="journeys">
     <p-card class="flex align-items-center justify-content-center mb-2">
         <div class="col-12">
@@ -8,14 +6,14 @@
                     class="flex flex-column sm:flex-row justify-content-between align-items-center sm:align-items-start flex-1 gap-4 ">
                     <div class="flex flex-column align-items-center sm:align-items-start gap-4 ">
                         <div class="text-2xl text-900 ">
-                            {{ journey.Journey.Origin}} - {{journey.Journey.Destination}}
+                            {{ journey.origin}} - {{journey.destination}}
 
                         </div>
                         <span class="text-2xl">
-                            USD $ {{ journey.Journey.Price}}
+                            {{ journey.totalPrice}}
                         </span>
                     </div>
-                    <app-card-flights [flights]="journey.Journey.Flights"></app-card-flights>
+                    <app-card-flights [flights]="journey.flights"></app-card-flights>
                 </div>
             </div>
         </div>
